Update Lipreading using Self designed CNN.ipynb

--- a/Lipreading using Self designed CNN.ipynb
+++ b/Lipreading using Self designed CNN.ipynb
@@ -215,7 +215,7 @@
     "    with open(r'volunteer_labelfiles.mlf', 'r') as f:\n",
     "        data = f.read().split('.')\n",
     "    #Converting unstructured to structured data\n",
-    "    a=[s.replace('Q:/Videos/TCD-TIMIT/volunteers/','') for s in data]\n",
+    "    a=[s.replace('Q:/Videos/..','') for s in data]\n",
     "    b=[s.replace('/Clips/straightcam/',' ') for s in a]\n",
     "    d= [i.split('\\n') for i in b]\n",
     "    f = {e[1] : e[2:] for e in d}\n",
